--- a/manifests/schema.yaml
+++ b/manifests/schema.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   url: mysql://root:pass@mysql:3306/example
   schema:
-    sql: |-
+    sql: |
       create table users (
         id int not null auto_increment,
         name varchar(255) not null,
